--- a/autoencoder/Simple_Autoencoder_Solution.ipynb
+++ b/autoencoder/Simple_Autoencoder_Solution.ipynb
@@ -244,6 +244,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -259,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
