--- a/gan_mnist/Intro_to_GANs_Exercises.ipynb
+++ b/gan_mnist/Intro_to_GANs_Exercises.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Generative Adversarial Network\n",
     "\n",
@@ -25,9 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -41,11 +46,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
+      "Extracting MNIST_data\\train-images-idx3-ubyte.gz\n",
+      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
+      "Extracting MNIST_data\\train-labels-idx1-ubyte.gz\n",
+      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
+      "Extracting MNIST_data\\t10k-images-idx3-ubyte.gz\n",
+      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
+      "Extracting MNIST_data\\t10k-labels-idx1-ubyte.gz\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "mnist = input_data.read_data_sets('MNIST_data')"
@@ -53,7 +75,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Model Inputs\n",
     "\n",
@@ -64,22 +89,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "def model_inputs(real_dim, z_dim):\n",
-    "    inputs_real = \n",
-    "    inputs_z = \n",
+    "    inputs_real = tf.placeholder(\n",
+    "        dtype = tf.float32,\n",
+    "        shape=(None, real_dim),\n",
+    "        name='inputs_real')\n",
+    "    \n",
+    "    inputs_z = tf.placeholder(\n",
+    "        dtype = tf.float32,\n",
+    "        shape=(None, z_dim),\n",
+    "        name='inputs_z')\n",
     "    \n",
     "    return inputs_real, inputs_z"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Generator network\n",
     "\n",
@@ -114,9 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -135,22 +174,36 @@
     "        -------\n",
     "        out: \n",
     "    '''\n",
-    "    with tf.variable_scope # finish this\n",
+    "    with tf.variable_scope ('generator', reuse=reuse):\n",
     "        # Hidden layer\n",
-    "        h1 = \n",
+    "        h1 = tf.layers.dense(\n",
+    "            inputs=z,\n",
+    "            units=n_units,\n",
+    "            activation=None)\n",
+    "        \n",
     "        # Leaky ReLU\n",
-    "        h1 = \n",
+    "        h1 = tf.maximum(\n",
+    "            (alpha*h1),\n",
+    "            h1,\n",
+    "            name=None)\n",
     "        \n",
     "        # Logits and tanh output\n",
-    "        logits = \n",
-    "        out = \n",
+    "        logits = tf.layers.dense(\n",
+    "            inputs=h1,\n",
+    "            units=out_dim,\n",
+    "            activation=None)\n",
+    "        \n",
+    "        out = tf.tanh(logits)\n",
     "        \n",
     "        return out"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Discriminator\n",
     "\n",
@@ -161,9 +214,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -181,30 +236,46 @@
     "        -------\n",
     "        out, logits: \n",
     "    '''\n",
-    "    with tf.variable_scope # finish this\n",
+    "    with tf.variable_scope('discriminator', reuse=reuse): # finish this\n",
     "        # Hidden layer\n",
-    "        h1 =\n",
-    "        # Leaky ReLU\n",
-    "        h1 =\n",
+    "        h1 = tf.layers.dense(\n",
+    "            inputs=x,\n",
+    "            units=n_units,\n",
+    "            activation=None)\n",
     "        \n",
-    "        logits =\n",
-    "        out =\n",
+    "        # Leaky ReLU\n",
+    "        h1 = tf.maximum(\n",
+    "            alpha*h1,\n",
+    "            h1,\n",
+    "            name=None)\n",
+    "        \n",
+    "        logits = tf.layers.dense(\n",
+    "            inputs=h1,\n",
+    "            units=1,\n",
+    "            name=None)\n",
+    "        \n",
+    "        out = tf.sigmoid(logits)\n",
     "        \n",
     "        return out, logits"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Hyperparameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -223,7 +294,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Build network\n",
     "\n",
@@ -240,28 +314,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
     "# Create our input placeholders\n",
-    "input_real, input_z = \n",
+    "input_real, input_z = model_inputs(input_size, z_size)\n",
     "\n",
     "# Generator network here\n",
-    "g_model = \n",
+    "g_model = generator(z=input_z,\n",
+    "                    out_dim=input_size,\n",
+    "                    n_units=g_hidden_size,\n",
+    "                    reuse=False,\n",
+    "                    alpha=alpha)\n",
     "# g_model is the generator output\n",
     "\n",
     "# Disriminator network here\n",
-    "d_model_real, d_logits_real = \n",
-    "d_model_fake, d_logits_fake = "
+    "d_model_real, d_logits_real = discriminator(x=input_real,\n",
+    "                                            n_units=d_hidden_size,\n",
+    "                                            reuse=False,\n",
+    "                                            alpha=alpha)\n",
+    "\n",
+    "d_model_fake, d_logits_fake = discriminator(x=g_model,\n",
+    "                                            n_units=d_hidden_size,\n",
+    "                                            reuse=True,\n",
+    "                                            alpha=alpha)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Discriminator and Generator Losses\n",
     "\n",
@@ -284,7 +374,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -300,7 +392,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Optimizers\n",
     "\n",
@@ -320,6 +415,8 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -338,7 +435,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Training"
    ]
@@ -348,6 +448,8 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -399,7 +501,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Training loss\n",
     "\n",
@@ -410,7 +515,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -423,7 +530,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -437,7 +546,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Generator samples from training\n",
     "\n",
@@ -448,7 +560,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -466,7 +580,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -477,7 +593,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "These are samples from the final training epoch. You can see the generator is able to reproduce numbers like 5, 7, 3, 0, 9. Since this is just a sample, it isn't representative of the full range of images this generator can make."
    ]
@@ -486,7 +605,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -495,7 +616,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Below I'm showing the generated images as the network was training, every 10 epochs. With bonus optical illusion!"
    ]
@@ -504,7 +628,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -520,14 +646,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "It starts out as all noise. Then it learns to make only the center white and the rest black. You can start to see some number like structures appear out of the noise. Looks like 1, 9, and 8 show up first. Then, it learns 5 and 3."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Sampling from the generator\n",
     "\n",
@@ -538,7 +670,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -569,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
