--- a/gan_mnist/Intro_to_GANs_Exercises.ipynb
+++ b/gan_mnist/Intro_to_GANs_Exercises.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -381,13 +381,26 @@
    "outputs": [],
    "source": [
     "# Calculate losses\n",
-    "d_loss_real = \n",
     "\n",
-    "d_loss_fake = \n",
+    "d_loss_real = tf.reduce_mean(\n",
+    "    tf.nn.sigmoid_cross_entropy_with_logits(\n",
+    "        logits=d_logits_real,\n",
+    "        labels=tf.ones_like(d_logits_real)*(1-smooth)))\n",
     "\n",
-    "d_loss = \n",
     "\n",
-    "g_loss = "
+    "d_loss_fake = tf.reduce_mean(\n",
+    "    tf.nn.sigmoid_cross_entropy_with_logits(\n",
+    "        logits=d_logits_fake,\n",
+    "        labels=tf.zeros_like(d_logits_fake)))\n",
+    "\n",
+    "\n",
+    "d_loss = d_loss_real + d_loss_fake\n",
+    "\n",
+    "\n",
+    "g_loss = tf.reduce_mean(\n",
+    "    tf.nn.sigmoid_cross_entropy_with_logits(\n",
+    "        logits=d_logits_fake,\n",
+    "        labels=tf.ones_like(d_logits_fake)))"
    ]
   },
   {
@@ -412,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -425,12 +438,12 @@
     "learning_rate = 0.002\n",
     "\n",
     "# Get the trainable_variables, split into G and D parts\n",
-    "t_vars = \n",
-    "g_vars = \n",
-    "d_vars = \n",
+    "t_vars = tf.trainable_variables()\n",
+    "g_vars = [var for var in t_vars if var.name.startswith('generator') ]\n",
+    "d_vars = [var for var in t_vars if var.name.startswith('discriminator') ]\n",
     "\n",
-    "d_train_opt = \n",
-    "g_train_opt = "
+    "d_train_opt = tf.train.AdamOptimizer(learning_rate).minimize(d_loss, var_list=d_vars)\n",
+    "g_train_opt = tf.train.AdamOptimizer(learning_rate).minimize(g_loss, var_list=g_vars)"
    ]
   },
   {
@@ -447,12 +460,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100... Discriminator Loss: 0.3663... Generator Loss: 3.7257\n",
+      "Epoch 2/100... Discriminator Loss: 0.3905... Generator Loss: 3.2414\n",
+      "Epoch 3/100... Discriminator Loss: 0.6839... Generator Loss: 4.1989\n",
+      "Epoch 4/100... Discriminator Loss: 1.6025... Generator Loss: 2.2178\n",
+      "Epoch 5/100... Discriminator Loss: 1.9125... Generator Loss: 1.5621\n",
+      "Epoch 6/100... Discriminator Loss: 1.8840... Generator Loss: 1.2696\n",
+      "Epoch 7/100... Discriminator Loss: 1.8519... Generator Loss: 2.5876\n",
+      "Epoch 8/100... Discriminator Loss: 2.0893... Generator Loss: 2.2203\n",
+      "Epoch 9/100... Discriminator Loss: 1.2583... Generator Loss: 1.7967\n",
+      "Epoch 10/100... Discriminator Loss: 1.5323... Generator Loss: 1.1489\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 100\n",
     "epochs = 100\n",
